# TimeLens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  README_zh.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
browser-extension/: .web-ext-config.json  README.md  background.js  i18n.js  manifest.json  package.json  popup.css  popup.html  popup.js
browser-extension/_locales/en/: messages.json
browser-extension/_locales/zh_CN/: messages.json
browser-extension/scripts/: build-chrome.js
docs/: ADD_LANGUAGE.html  ADD_LANGUAGE.md  API_REFERENCE.html  ARCHITECTURE.html  CNAME  DEVELOPMENT.html  DEVELOPMENT.md  WIDGETS_DEV_GUIDE.html  WIDGETS_DEV_GUIDE.md  WIDGETS_DEV_GUIDE.zh-CN.html  WIDGETS_DEV_GUIDE.zh-CN.md  index.html  styles.css
examples/third-party-widget-template/: README.md  README.zh-CN.md  index.js  manifest.json
scripts/: build-msix.ps1
src/: App.tsx  MainApp.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  widget_registry.rs
src-tauri/src/api_server/: mod.rs
src-tauri/src/commands/: app_cmd.rs  browser_cmd.rs  mod.rs  monitor_cmd.rs  productivity_cmd.rs  storage_cmd.rs  widget_cmd.rs  widget_permissions.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/monitor/: mod.rs
src-tauri/windows/msix-staging/: AppxManifest.xml
src/components/: AppDetailModal.tsx  ExePickerInput.tsx  GlobalSearch.tsx  LanguageSwitcher.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx  navItems.ts
src/i18n/: config.ts
src/i18n/locales/en/: browserUsage.json  categories.json  common.json  dashboard.json  focus.json  goals.json  limits.json  settings.json  widgets.json
src/i18n/locales/zh-CN/: browserUsage.json  categories.json  common.json  dashboard.json  focus.json  goals.json  limits.json  settings.json  widgets.json
src/pages/BrowserUsage/: index.tsx
src/pages/Categories/: index.tsx
src/pages/Dashboard/: AppList.tsx  AppRankingChart.tsx  CategoryInsights.tsx  GoalProgressBar.tsx  HourlyTimeline.tsx  ProductivityScoreCard.tsx  ProductivityTrendChart.tsx  TodayOverview.tsx  TrendComparePanel.tsx  UsageHeatmap.tsx  index.tsx
src/pages/FocusMode/: index.tsx
src/pages/Goals/: index.tsx
src/pages/HomeCustomize/: index.tsx
src/pages/Limits/: index.tsx
src/pages/Settings/: index.tsx
src/pages/VsCodeInsights/: index.tsx
src/pages/WidgetCenter/: WidgetPermissionDialog.tsx  index.tsx
src/services/: tauriApi.ts
src/stores/: dashboardLayoutStore.ts  settingsStore.ts  statsStore.ts  widgetStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: format.ts
src/widgets/: ClockWidget.tsx  ExternalWidgetHost.tsx  NoteWidget.tsx  StatusWidget.tsx  TimerWidget.tsx  TodoWidget.tsx  WidgetWindow.tsx
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  timelens-vscode-extension-0.1.0.vsix  timelens-vscode-extension-0.2.0.vsix  tsconfig.json
vscode-extension/src/: dashboardPanel.ts  dashboardSidebarView.ts  extension.ts  sessionTracker.ts
vscode-extension/src/api/: timelensApi.ts
